[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/card_back.png" type="Texture" id=1]
[ext_resource path="res://Resources/dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/Deck/InvisContainer.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Deck/Deck.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Deck/Label.gd" type="Script" id=5]
[ext_resource path="res://Resources/dynamicfont2.tres" type="DynamicFont" id=6]

[node name="Deck" type="TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -784.0
margin_bottom = -264.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 4
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountLabel" type="Label" parent="CenterContainer"]
margin_left = 106.0
margin_top = 137.0
margin_right = 133.0
margin_bottom = 199.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1
valign = 1
script = ExtResource( 5 )

[node name="InvisContainer" type="Container" parent="."]
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_Deck_gui_input"]
[connection signal="change_text" from="InvisContainer" to="CenterContainer/CountLabel" method="_on_InvisContainer_change_text"]
[connection signal="sort_children" from="InvisContainer" to="InvisContainer" method="_on_InvisContainer_sort_children"]
